Aligned main section

--- a/index.html
+++ b/index.html
@@ -9,36 +9,54 @@
 
 <body>
   <div class="main-section">
-    <h2>Header Logo</h2>
+  <div class="headers">
+    <div class="logo">Header Logo</div>
+  <div class="links">
     <a href="#">header link one</a>
     <a href="#">header link two</a>
     <a href="#">header link three</a>
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. I'ts a smaller fonr and the color is lower contrast</p>
-    <button>Sign up</button>
+  </div>
+  </div>
+  <div class="hero-img">
+  <div class="hero-text">
+    <div class="hero-main-text">This website is awesome</div>
+    <div class="hero-secondary-text">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</div>
+    <div class="button"><button>Sign up</button></div>
+  </div>
     <img src="images/main-page-img.png" alt="strawhat crew on going merry" height="300px">
   </div>
-
-  <div class="information-section">
-    <h2>Some random information</h2>
-    <div class="potrait-image"><img src="images/Monkey_D._Luffy_Portrait.png" rel="Luffy Portrait"></div>
-    <div class="potrait-image"><img src="images/Roronoa_Zoro_Portrait.png" alt="Roronoa Zoro Portrait"></div>
-    <div class="potrait-image"><img src="images/Nami_Portrait.png" rel="Nami Portrait"></div>
-    <div class="potrait-image"><img src="images/Sanji_Portrait.png" rel="Sanji Portrait"></div>
-    <p>thus is some subtext inder an illustration or image</p>
-    <p>thus is some subtext inder an illustration or image</p>
-    <p>thus is some subtext inder an illustration or image</p>
-    <p>thus is some subtext inder an illustration or image</p>
   </div>
 
+
+  <div class="information-section">
+    <div class="header-text">Some random information</div>
+  <div class= images>
+    <div class="potrait-image"><img src="images/Monkey_D._Luffy_Portrait.png" rel="Luffy Portrait">
+      <p>this is some subtext inder an illustration or image</p>
+    </div>
+    <div class="potrait-image"><img src="images/Roronoa_Zoro_Portrait.png" alt="Roronoa Zoro Portrait">
+      <p>this is some subtext inder an illustration or image</p>
+    </div>
+    <div class="potrait-image"><img src="images/Nami_Portrait.png" rel="Nami Portrait">
+      <p>this is some subtext inder an illustration or image</p>
+    </div>
+    <div class="potrait-image"><img src="images/Sanji_Portrait.png" rel="Sanji Portrait">
+      <p>this is some subtext inder an illustration or image</p>
+    </div>
+    </div>
+  </div>
+
+
   <div class="quote-section">
-    <p>“People’s Dreams... Have No Ends”</p>
-    <p>Marshall D. Teach</p>
+    <div class="quote">People's Dreams... Have No Ends</div>
+    <div class="quotee">-Marshall D. Teach</div>
   </div>
 
   <div class="signup">
-    <h3>Call to action! it's time!</h3>
-    <p> Sign up for our product by clicking that button right over there</p>
+    <div class="signup-msg">
+    <div>Call to action! it's time!</div>
+    <div>Sign up for our product by clicking that button right over there</div>
+    </div>
     <button>Sign up</button>
   </div>
 
