--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
   <div class="main-section">
   <div class="headers">
-    <div class="logo">Header Logo</div>
+    <div class="logo">One Piece Fanpage</div>
   <div class="links">
-    <a href="#">header link one</a>
-    <a href="#">header link two</a>
-    <a href="#">header link three</a>
+    <a href="https://aniwatch.to/one-piece-100?ref=search"> Anime</a>
+    <a href="https://tcbscans.com/mangas/5/one-piece?date=20-7-2023-18">Manga</a>
+    <a href="https://www.reddit.com/r/OnePiece/">Reddit community</a>
   </div>
   </div>
   <div class="hero-img">
   <div class="hero-text">
-    <div class="hero-main-text">This website is awesome</div>
-    <div class="hero-secondary-text">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</div>
+    <div class="hero-main-text">One Piece is incredible</div>
+    <div class="hero-secondary-text">ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!</div>
     <div class="button"><button>Sign up</button></div>
   </div>
     <img src="images/main-page-img.png" alt="strawhat crew on going merry" height="300px">
@@ -29,35 +29,36 @@
 
 
   <div class="information-section">
-    <div class="header-text">Some random information</div>
+    <div class="header-text">Straw Hat Pirates</div>
   <div class= images>
     <div class="potrait-image"><img src="images/Monkey_D._Luffy_Portrait.png" rel="Luffy Portrait">
-      <p>this is some subtext inder an illustration or image</p>
+      <div class="info-text">Monkey D. Luffy, commonly as "Straw Hat". He is the founder and captain of the Straw Hat Pirates.</div>
     </div>
     <div class="potrait-image"><img src="images/Roronoa_Zoro_Portrait.png" alt="Roronoa Zoro Portrait">
-      <p>this is some subtext inder an illustration or image</p>
+      <div class="info-text">Roronoa Zoro, is a main combatant of the Straw Hat Pirates and is publicly recognized as the right-hand man of his crew's captain.</div>
     </div>
     <div class="potrait-image"><img src="images/Nami_Portrait.png" rel="Nami Portrait">
-      <p>this is some subtext inder an illustration or image</p>
+      <div class="info-text">"Cat Burglar" Nami is the navigator of the Straw Hat Pirates and one of the Senior Officers of the Straw Hat Grand Fleet.</div>
     </div>
     <div class="potrait-image"><img src="images/Sanji_Portrait.png" rel="Sanji Portrait">
-      <p>this is some subtext inder an illustration or image</p>
+      <div class="info-text">"Black Leg" Sanji, is the cook of the Straw Hat Pirates and one of the Senior Officers of the Straw Hat Grand Fleet.</div>
     </div>
     </div>
   </div>
 
 
   <div class="quote-section">
-    <div class="quote">People's Dreams... Have No Ends</div>
-    <div class="quotee">-Marshall D. Teach</div>
+    <div class="quotee">-Marshall D. Teach aka Blackbeard</div>
   </div>
 
   <div class="signup">
+    <div class="msg-button">
     <div class="signup-msg">
-    <div>Call to action! it's time!</div>
-    <div>Sign up for our product by clicking that button right over there</div>
+    <div class="main-msg">Want to learn more about One Piece?</div>
+    <div class="sub-msg">Sign up to receive access to our newsletter and join our fan community. </div>
     </div>
-    <button>Sign up</button>
+    <div class="button"><button>Sign up</button></div>
+  </div>
   </div>
 
   <div class="footer">
